<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">D-Package</string>
    <string name="title_activity_home_client">HomeClient</string>
    <string name="action_settings">Menu</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="how_client_preview">As a customer you can</string>
    <string name="send_package_preview">Send Packages</string>
    <string name="monitory_text_preview">And monitor them at all times</string>
    <string name="you_can_express_preview">You can choose to send immediately (Express)</string>
    <string name="save_money_preview">Save money with comfortable installments</string>
    <string name="you_can_ps_preview">As a service provider you can</string>
    <string name="you_can_send_package_preview">Receive and deliver packages</string>
    <string name="won_money_preview">Earn money for each shipment</string>
    <string name="calificate_preview">Deliver packages and be qualified by your customers</string>
    <string name="money_security_preview">Receive money safely and fast</string>
    <string name="wish_preview">I wish to be:</string>
    <string name="wish_client_preview">Client to send packets</string>
    <string name="wish_ps_preview">Service provider and earn money</string>
    <string name="or_preview">Or Preview</string>
    <string name="login">Log in</string>
    <string name="invalid_fisrt_name">Invalid Name</string>
    <string name="invalid_last_name">Invalid Last Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="invalid_conditions">Must Accept Terms</string>
    <string name="ID_Licence">ID License</string>
    <string name="ID_number">ID Number</string>
    <string name="NunContact">ID Contact</string>
    <string name="_continue">Continue</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Birthdate</string>
    <string name="email">Email</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="first_name">Name</string>
    <string name="image_perfil">Profile Image</string>
    <string name="image_vehicle_one">Image of Vehicle One</string>
    <string name="image_vehicle_three">Image of Vehicle Three</string>
    <string name="image_vehicle_two">Image of Vehicle Two</string>
    <string name="imagen">Image</string>
    <string name="last_name">Last Name</string>
    <string name="login_facebook">Login facebook</string>
    <string name="login_google">Login google</string>
    <string name="login_twitter">Login twitter</string>
    <string name="password">Password</string>
    <string name="placa">License Plate Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="register">Register</string>
    <string name="register_as">Register As:</string>
    <string name="register_client">Client</string>
    <string name="register_provider">Service Provider</string>
    <string name="sign">Sign</string>
    <string name="step_one">Step One</string>
    <string name="step_three">Step Three</string>
    <string name="step_two">Step Two</string>
    <string name="term_condition">Accept Terms and Conditions</string>
    <string name="title_activity_login">Sign in</string>
    <string name="year">Year</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="invalid_birtday">Invalid Birthday</string>
    <string name="invalid_idnumber">Invalid ID Number</string>
    <string name="invalid_address">Invalid Address</string>
    <string name="invalid_license">Invalid License</string>
    <string name="invalid_contac">Invalid Nº Contact</string>
    <string name="invalid_plateNumber">Invalid Plate Number</string>
    <string name="invalid_year">Invalid Year</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="change">Change</string>
    <string name="password_not_matches">Passwords Do Not Match</string>
    <string name="register_bank_details">Register Bank Details</string>
    <string name="change_password">Change Password</string>
    <string name="account_owner">Account Owner</string>
    <string name="name_bank">Name Bank</string>
    <string name="type_account">Type Account</string>
    <string name="number_account">Number Account</string>
    <string name="recover_password">Recover Password</string>
    <string name="indication_recover_password">Enter the email you registered with and we will send you a link to recover your password</string>
    <string name="savings_account">Savings Account</string>
    <string name="current_account">Current Account</string>
    <string name="selection">Selection</string>
    <string name="selection_acount">Selection an Account</string>
    <string name="selection_type_acount">Selection an Type Account</string>
    <string name="invalid_number_account">Invalid Number Account</string>
    <string name="invalid_owner_account">Invalid Name</string>
    <string name="save">Save</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_request_text">New Request</string>
    <string name="type_request_text">Type Request</string>
    <string name="currency_symbol">$</string>
    <string name="photos_package">Photos Package</string>
    <string name="destine_text">Destine</string>
    <string name="origin_text">Origin</string>
    <string name="type_package_text">Type Package</string>
    <string name="insure_package_text">Value Insure Package</string>
    <string name="car_number">Car Number</string>
    <string name="expire_date">Expire Date</string>
    <string name="name_on_card">Name On Card</string>
    <string name="card_code">Card Code</string>
    <string name="card_number">Card Number</string>
    <string name="add_card">Add Card</string>
    <string name="select_cards">Select Cards</string>
    <string name="visa">Card VISA</string>
    <string name="master">Card MasterCard</string>
    <string name="Tag">Tag</string>
    <string name="your_receipt">Your Receipt</string>
    <string name="submit_comment">"Submit "</string>
    <string name="rate_ride">Rate Your Ride</string>
    <string name="comment">Leave a Comment</string>
    <string name="how_client_preview">Como cliente puedes</string>
    <string name="send_package_preview">Enviar Paquetes</string>
    <string name="monitory_text_preview">Y monitorizarlos en cada momento</string>
    <string name="you_can_express_preview">Puedes elegir para enviarlo de inmediato (Express)</string>
    <string name="save_money_preview">Ahorra dinero con comodas cuotas</string>
    <string name="you_can_ps_preview">Como prestador de servicio puedes</string>
    <string name="you_can_send_package_preview">Recibir y entregar paquetes</string>
    <string name="won_money_preview">Gane dinero por cada envio</string>
    <string name="calificate_preview">Entregue paquetes y sea calificado por sus clientes</string>
    <string name="money_security_preview">Reciba el dinero de forma segura y rapida</string>
    <string name="wish_preview">Deseo ser:</string>
    <string name="wish_client_preview">Cliente para enviar paquetes</string>
    <string name="wish_ps_preview">Prestador de servicio y ganar dinero</string>
    <string name="or_preview">Ó bien</string>
    <string name="login">Iniciar sesión</string>
    <string name="title_activity_login">Sign in</string>

    <string name="imagen">Imagen</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Raidy-->
    <!--Initial Application-->
    <string name="register_as">Registrarse Como:</string>
    <string name="register_provider">Proveedor De Servicio</string>
    <string name="register_client">Cliente</string>

    <!--Registers Of Cliente and Provider Service-->

    <string name="register">Registro</string>

    <string name="step_one">Paso 1</string>
    <string name="step_two">Paso 2</string>
    <string name="step_three">Paso 3</string>

    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo Electrónico</string>
    <string name="sign">Registrar</string>

    <string name="term_condition">Aceptar Terminos y Condiciones</string>
    <string name="ID_number">Nº Identidad</string>
    <string name="ID_Licence">Nº de Licencia</string>
    <string name="date_of_birth">Fecha de Nacimiento</string>
    <string name="address">Direccion</string>
    <string name="_continue">Continuar</string>
    <string name="NunContact">Nº de Contacto</string>
    <string name="placa">Nº Placa</string>
    <string name="year">Año</string>

    <!--context image-->
    <string name="image_perfil">Imagen Perfil</string>
    <string name="login_facebook">Login facebook</string>
    <string name="login_google">Login google</string>
    <string name="login_twitter">Login twitter</string>
    <string name="image_vehicle_one">Imagen Vehiculo Uno</string>
    <string name="image_vehicle_two">Imagen Vehiculo Dos</string>
    <string name="image_vehicle_three">Imagen Vehiculo Tres</string>

    <string name="tag">Tag</string>
    <string name="destine">Destine</string>
    <string name="service_provider">Service provider</string>
    <string name="express">Express</string>
    <string name="status_send">Send</string>
    <string name="no_login_message">Login invalid</string>
</resources>
