<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="team.software.d_packageapp.RegisterClient"

    android:id="@+id/activity_registro_cliente"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/container_image_login">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/facebook"
            android:id="@+id/login_facebook"
            android:contentDescription="@string/login_facebook"
            android:padding="@dimen/activity_horizontal_margin"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/google"
            android:id="@+id/login_google"
            android:contentDescription="@string/login_google"
            android:padding="@dimen/activity_horizontal_margin"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/twitter"
            android:id="@+id/login_twitter"
            android:contentDescription="@string/login_twitter"
            android:padding="@dimen/activity_horizontal_margin" />
    </LinearLayout>

    <TextView
        android:text="@string/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_name"
        android:layout_below="@+id/container_image_login"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_name"
        android:layout_marginRight="70dp"
        android:layout_marginEnd="70dp"
        android:layout_alignBaseline="@+id/first_name"
        android:layout_alignBottom="@+id/first_name"
        android:layout_alignRight="@+id/container_image_login"
        android:layout_alignEnd="@+id/container_image_login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputFirstName"
        android:layout_below="@+id/first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/last_name"
        android:layout_toStartOf="@+id/last_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/inputLastName"
        android:layout_alignBaseline="@+id/inputFirstName"
        android:layout_alignBottom="@+id/inputFirstName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/inputFirstName"
        android:layout_toEndOf="@+id/inputFirstName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/email"
        android:layout_below="@+id/inputFirstName"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/inputEmail"
        android:layout_below="@+id/email"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/password"
        android:layout_below="@+id/inputEmail"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/inputPassword"
        android:layout_below="@+id/password"/>

    <CheckBox
        android:text="@string/term_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/checkBoxTermCondition" />

    <Button
        android:text="@string/sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonRegistrar" />

</RelativeLayout>