<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/scrollView">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:id="@+id/activity_register_provider_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="team.software.d_packageapp.RegisterProviderServiceOne">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/container_image_login">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/facebook"
                android:id="@+id/login_facebook"
                android:contentDescription="@string/login_facebook"
                android:padding="@dimen/activity_horizontal_margin"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/google"
                android:id="@+id/login_google"
                android:contentDescription="@string/login_google"
                android:padding="@dimen/activity_horizontal_margin"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/twitter"
                android:id="@+id/login_twitter"
                android:contentDescription="@string/login_twitter"
                android:padding="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/separatorOne"
            android:layout_below="@+id/container_image_login"
            android:background="@color/colorDivider"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/separatorOne"
            android:id="@+id/container_image_name"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@mipmap/perfil_usuario"
                android:id="@+id/imagePerfil"
                android:contentDescription="@string/image_perfil" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/container_name">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_firstName">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/first_name"
                        android:ems="10"
                        android:id="@+id/inputFirstName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_lastName">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:id="@+id/inputLastName" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/container_image_name"
            android:id="@+id/container_id_date"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/til_dateOfBirth">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:hint="@string/date_of_birth"
                    android:ems="10"
                    android:id="@+id/inputDateOfBirth" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/til_idNumber">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:hint="@string/ID_number"
                    android:id="@+id/inputIdNumber" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/container_id_date"
            android:id="@+id/til_address">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/inputAddress"
                android:hint="@string/address"
                android:layout_below="@+id/address"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_address"
            android:text="@string/_continue"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:id="@+id/buttonContinue"
            android:onClick="launchActivityRegisterProviderServiceTwo"/>
    </RelativeLayout>
</ScrollView>